--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Программирование</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/media.css">
+    <script src="https://kit.fontawesome.com/78c4789d50.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -95,5 +96,18 @@
             <p>Если интересуют красивые эффекты для веба — попробуйте начать с простейшего набора из JavaScript, CSS и HTML. Со временем подтянете PHP и сможете создавать на нём полноценные сайты. Если же вам интереснее программы, сервисы и скрипты — посмотрите в сторону Python, Java или С#. Для новичка может быть сложновато, зато это мощные универсальные языки, которые подходят практически для любых задач. Под мобильную разработку учите Swift для iOS и Java/Kotlin для Android. Но с ними придется попотеть и лучше, чтобы был хоть какой-то опыт в программировании.</p>
         </section>
     </main>
+    <hr>
+    <footer>
+        <h1>Contacts</h1>
+        <p>Telephone: +996 (234) 324 234 </p>
+        <p>Email: programming@gmail.com</p>
+        <ul>
+            <li><a href=""><i class="fab fa-whatsapp"></i></a></li>
+            <li><a href=""><i class="fab fa-telegram-plane"></i></a></li>
+            <li><a href=""><i class="fab fa-youtube"></i></a></li>
+            <li><a href=""><i class="fab fa-instagram"></i></a></li>
+            <li><<a href=""><i class="fab fa-twitter"></i></a></li>
+        </ul>
+    </footer>
 </body>
 </html>
